; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_lsyscache.c_get_namespace_name_or_temp.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/cache/extr_lsyscache.c_get_namespace_name_or_temp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"pg_temp\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @get_namespace_name_or_temp(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @isTempNamespace(i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %11

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = call i8* @get_namespace_name(i32 %9)
  store i8* %10, i8** %2, align 8
  br label %11

11:                                               ; preds = %8, %7
  %12 = load i8*, i8** %2, align 8
  ret i8* %12
}

declare dso_local i64 @isTempNamespace(i32) #1

declare dso_local i8* @get_namespace_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
